[package]
name = "img-util-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
md5 = "0.7"
mime_guess = "2.0"
reqwest = { version = "0.12", features = ["json", "multipart", "gzip", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2.5"
urlencoding = "2.1"
